# Hydra

./: .gitignore  Actions.h  CMakeLists.txt  Game.cpp  Game.h  GameState.cpp  GameState.h  LICENSE  Reconstruct.cpp  Relax.h  main.cpp
lib/SDL2-2.0.8/VisualC/SDL/: SDL.vcxproj
lib/SDL2-2.0.8/VisualC/SDL/Win32/Debug/SDL2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
lib/SDL2-2.0.8/VisualC/SDL/x64/Release/SDL2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL2.write.1u.tlog  link.command.1.tlog  (+4 more)
lib/SDL2-2.0.8/VisualC/SDLmain/: SDLmain.vcxproj
lib/SDL2-2.0.8/VisualC/Win32/Debug/: SDL2.exp  SDL2.ilk  SDL2main.lib  SDL2test.lib  checkkeys.ilk  controllermap.ilk  loopwave.ilk  testatomic.ilk  testautomation.ilk  testdraw2.ilk  testfile.ilk  testgamecontroller.ilk  testgesture.ilk  testgl2.ilk  testgles2.ilk  testjoystick.ilk  testoverlay2.ilk  testplatform.ilk  testpower.ilk  testrendertarget.ilk  testrumble.ilk  testscale.ilk  testshape.ilk  testsprite2.ilk  testvulkan.ilk  testyuv.ilk
lib/SDL2-2.0.8/VisualC/x64/Release/: SDL2.exp  SDL2main.lib  SDL2test.lib  checkkeys.ilk  controllermap.ilk  loopwave.ilk  testatomic.ilk  testautomation.ilk  testdraw2.ilk  testfile.ilk  testgamecontroller.ilk  testgesture.ilk  testgl2.ilk  testgles2.ilk  testjoystick.ilk  testoverlay2.ilk  testplatform.ilk  testpower.ilk  testrendertarget.ilk  testrumble.ilk  testscale.ilk  testshape.ilk  testsprite2.ilk  testvulkan.ilk  testyuv.ilk
(+312 files in other folders)
